# Flocks

./: .gitignore  AGENTS.md  README.md  README_zh.md  install.ps1  install.sh  install_zh.ps1  install_zh.sh  pyproject.toml
.flocks/: flocks.json.example
.github/workflows/: ci.yml
docker/: Dockerfile
flocks/: __init__.py
flocks/agent/: agent.py  agent_factory.py  registry.py  toolset.py
flocks/channel/gateway/: manager.py
flocks/cli/: main.py  service_manager.py
flocks/cli/commands/: agent.py  stats.py  task.py  update.py
flocks/config/: config.py
flocks/mcp/: installer.py
flocks/memory/sync/: chunking.py
flocks/plugin/: loader.py
flocks/provider/: cost_calculator.py  provider.py  types.py  usage_service.py
flocks/provider/sdk/: openai.py  openai_base.py  openai_compatible.py  openrouter.py
flocks/server/: app.py
flocks/server/routes/: agent.py  file.py  find.py  health.py  onboarding.py  provider.py  session.py  task_entities.py  tool.py  update.py  usage.py  workflow.py
flocks/session/: callable_schema.py  callable_state.py  prompt.py  runner.py  session.py
flocks/session/streaming/: llm.py
flocks/storage/: storage.py
flocks/task/: __init__.py  executor.py  manager.py  models.py  plugin_sync.py  queue.py  scheduler.py  store.py
flocks/tool/: catalog.py  registry.py  truncation.py
flocks/tool/file/: read.py  write.py
flocks/tool/skill/: flocks_skills.py
flocks/tool/system/: tool_search.py
flocks/tool/task/: task_center.py
flocks/updater/: updater.py
flocks/utils/: __init__.py  file.py  http_file_read_guard.py  id.py  paths.py  tiktoken_cache.py
flocks/workflow/: fs_store.py
npm-wrapper/: README.md
scripts/: container-start.sh  install.ps1  install.sh  install_zh.ps1  install_zh.sh  migrate_legacy_task_tables.py  run.sh  run_legacy_task_migration.sh  serve_webui.py
tests/agent/: test_agent.py  test_agent_factory.py
tests/channel/: test_feishu.py
tests/cli/: test_service_commands.py  test_service_manager.py  test_stats_command.py  test_update_command.py
tests/integration/: test_capability_awareness.py  test_task_queue_integration.py  test_tool_integration.py  test_ui_integration.py
tests/provider/: test_api_service_management.py  test_model_management_p2p3.py  test_openai_base_provider.py  test_openai_compatible_provider.py  test_openai_provider.py  test_test_credentials.py
tests/scripts/: test_bash_scripts.py  test_browser_runtime_configuration.py  test_install_script_help.py  test_install_script_process_cleanup.py  test_install_script_sources.py  test_powershell_scripts.py  test_serve_webui.py
tests/server/: test_lifespan.py  test_server.py
tests/server/routes/: test_onboarding_routes.py  test_remaining_routes.py  test_session_routes.py
tests/session/: test_callable_schema.py  test_callable_state.py  test_runner_step.py  test_session.py  test_session_runner_tool_only_message.py
tests/skill/: test_onboarding_status.py
tests/task/: test_task.py
tests/tool/: test_agent_toolset.py  test_flocks_skills.py  test_tdp_skyeye_api_plugins.py  test_tool_catalog.py  test_tool_search_discovery.py
tests/updater/: test_updater.py
tests/workflow/: test_fs_store.py
tui/flocks/tool/: write.txt
webui/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
webui/src/api/: provider.ts  session.test.ts  session.ts  stats.ts  task.ts  update.ts
webui/src/hooks/: useSessions.test.ts  useSessions.ts  useTasks.ts
webui/src/types/: index.ts
(+80 files in other folders)
